chan_sip: fixed ice candidate as media_address when specified

The add_ice_to_sdp() function has been forced to use media_address when a
value is assigned in sip.conf.
This allow webrtc clients to work straight with wss natted server.

ASTERISK-25360 #close

Change-Id: I352dfc76096ef4d742f14f869ecd620d4b2c8fd6